--- a/FoodOrder/FoodOrder.Silverlight/MainPage.xaml
+++ b/FoodOrder/FoodOrder.Silverlight/MainPage.xaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="411" d:DesignWidth="560" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk">
+    d:DesignHeight="414" d:DesignWidth="620" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk">
     <UserControl.Resources>
         <ResourceDictionary>
             <Style TargetType="TextBlock">
@@ -39,6 +39,7 @@
                 <Button Command="{Binding RandomizeChoices}" Margin="10">Randomize choices</Button>
                 <Button Command="{Binding CreateExcel}" Margin="10">Create Excel document</Button>
                 <Button Command="{Binding CreateWord}" Margin="10">Create Word document</Button>
+                <Button Command="{Binding CreateCSV}" Margin="10">Create csv document</Button>
             </StackPanel>
             <StackPanel>
                 <sdk:DataGrid AutoGenerateColumns="False" DataContext="{Binding Menus}" ItemsSource="{Binding .}">
