Link to demo example

--- a/Advanced/TemplaterServer/template/index.html
+++ b/Advanced/TemplaterServer/template/index.html
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1 class="upper">Demo</h1>
+      <h2 class="upper">
+        <a href="https://github.com/ngs-doo/TemplaterExamples/tree/master/Advanced/TemplaterServer" target="_blank">Demo source code</a>
+      </h2>
     </div>
   </div>
   <div class="row">
