Suggest portable version of LibreOffice as an alternative

--- a/Advanced/TemplaterServer/template/index.html
+++ b/Advanced/TemplaterServer/template/index.html
@@ -40,7 +40,7 @@
               <button type="button" class="btn btn-primary btn-switch append-bottom" id="toggle-pdf" style="display:none">
                 PDF conversion OFF
               </button>
-              <small class="text-muted" id="toggle-helper" style="display:none;">(toggle for docx)</small>
+              <small class="text-muted" id="toggle-helper" style="display:none;">(toggle for docx and pptx)</small>
               <input type="hidden" name="toPdf" value="false"/>
               <input type="hidden" name="pdf" value=""/>
               <input type="hidden" name="template" value="${defaultFilename}"/>
