Minor TemplaterServer improvements
More logging.
Option to pass in custom resource path.
Fix template download in TemplaterServer example

--- a/Advanced/TemplaterServer/template/index.html
+++ b/Advanced/TemplaterServer/template/index.html
@@ -73,8 +73,8 @@
           <button type="button" class="btn btn-danger btn-switch append-bottom" id="toggle-schema" style="display:none; margin-bottom: 6px">
             Templater Editor Schema OFF
           </button>
-          <button id="download-template" type="submit" class="btn btn-success btn-lg">
-            Download ${defaultFilename}<span class="has-active-template"></span>
+          <button type="submit" class="btn btn-success btn-lg">
+            <span id="download-template" class="has-active-template">Download ${defaultFilename}</span>
             <span class="btn-icon"> <i class="fa fa-download"></i></span>
           </button>
         </form>
